@@ -3,6 +3,9 @@ TODO:
     (require re-work of warp mechanism)
   - remove warp registration mechanism (was premature optimisation)
 
+    * Framework changes:
+       * Value: don't perform value check when fetching standard or default value
+
 2011-04-07 Dominique Dumont  <domi.dumont@free.fr> 1.241
     
     * Framework changes:
